# Acinonyx-v3

./: Install.py  Main.py  MultiLanguage.json  pyproject.toml  settings_dict.json
Cogs/: Actions.py  Admin.py  Ascii.py  Bot.py  BotAdmin.py  Calc.py  Cats.py  Channel.py  ChatterBot.py  CheckRoles.py  ChooseLang.py  Clippy.py  CogManager.py  Comic.py  Debugging.py  Dice.py  DisableCommand.py  Discogs.py  DotaBase.py  EightBall.py  Emoji.py  Encode.py  Errors.py  Eval.py  Feed.py  Fliptime.py  GetImage.py  GlobalMigration.py  Heart.py  Help.py  Humor.py  ImageFilter.py  Invite.py  JazUtils.py  LangFilter.py  Lists.py  Message.py  Morse.py  Mute.py  OfflineUser.py  (+29 more)
